# server/api/src/app.module.ts
@@ -3,7 +3,9 @@ import { ConfigModule } from '@nestjs/config';
 
 import { validateEnv } from './config/env.validation';
 import { AuthModule } from './modules/auth/auth.module';
+import { GamificationModule } from './modules/gamification/gamification.module';
 import { GoalsModule } from './modules/goals/goals.module';
+import { HabitsModule } from './modules/habits/habits.module';
 import { HealthModule } from './modules/health/health.module';
 import { PrismaModule } from './modules/prisma/prisma.module';
 import { SessionsModule } from './modules/sessions/sessions.module';
@@ -21,6 +23,8 @@ import { UsersModule } from './modules/users/users.module';
     UsersModule,
     SessionsModule,
     GoalsModule,
+    HabitsModule,
+    GamificationModule,
     HealthModule,
   ],
 })
