# server/api/src/modules/gamification/gamification.module.ts
@@ -1,0 +1,13 @@
+import { Module } from '@nestjs/common';
+
+import { AuthModule } from '../auth/auth.module';
+import { GamificationController } from './gamification.controller';
+import { GamificationService } from './gamification.service';
+
+@Module({
+  imports: [AuthModule],
+  controllers: [GamificationController],
+  providers: [GamificationService],
+  exports: [GamificationService],
+})
+export class GamificationModule {}
